kubernetes/examples/ingress/app1-backend.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: app1-backend
  labels:
    name: app1-backend
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: app1-backend
    spec:
      containers:
      - name: app1-backend
        image: hashicorp/http-echo:latest
        command: ["/http-echo", "-listen=:80", "-text=app1-backend"]
        ports:
          - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: app1-backend
  labels:
    name: app1-backend
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
  selector:
    name: app1-backend
