kubernetes/examples/ingress/app2.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: app2
  labels:
    name: app2
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: app2
    spec:
      containers:
      - name: app2
        image: hashicorp/http-echo:latest
        command: ["/http-echo", "-listen=:80", "-text=app2"]
        ports:
          - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: app2
  labels:
    name: app2
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
  selector:
    name: app2
